# Predictive_Modeling

./: README.md
Gender_Recognition/: Readme.md
Gender_Recognition/NN/: Inference.ipynb  Training.ipynb
Gender_Recognition/label_data/: Classify_images.ipynb  label_data.ipynb
Hackaton/: README.md  Unknown_dataset.csv  analysis.ipynb  danalysis.ipynb  pipeline.py
Hackaton/data/: Audit_test_.csv  Audit_train_.csv  Audit_unknown_.csv
NN_Bases/: Data_Analysis.ipynb  P9_MLP_.py  Readme.md  config_global.yml  makefile
NN_Bases/Grid_search/: grid_search_test.ipynb
NN_Bases/Modeling/: NN_model.ipynb  NN_train.py  linear_model.ipynb  logging_outputs.txt
NN_Bases/sdk/: requirements.txt  setup.cfg
NN_Bases/sdk/neural_networks/: Model.py  Utils.py  log_config.py  nn_utils.py
NN_Bases/sdk/neural_networks.egg-info/: SOURCES.txt
NN_Bases/sdk/neural_networks/neural_networks.egg-info/: PKG-INFO  requires.txt
NanoFilm_Optimization/: README.md
NanoFilm_Optimization/Analysis/: Find_maximizers.ipynb  Statistical_A.ipynb
NanoFilm_Optimization/Bayesian_Optimization/: Optimization_analysis.ipynb  Optimization_svc.ipynb
NanoFilm_Optimization/Bayesian_Optimization/Logs/: svr.jsonl
NanoFilm_Optimization/Data/: X_nueva_predicha  X_nueva_predicha_035  datos edgar.xlsx  prueba.csv  prueba2.csv
NanoFilm_Optimization/Models/: Datos_prueba.py  model_svr.pkl  pipeline_SVM.py  standard_scaler.pkl
