[metadata]
name = neural_networks
version = 0.0.1
author = "My self"
description = "Functions for neural networks project"
# long_description = file: README.md
# long_description_content_type = text/markdown
platforms = Linux, Windows


[options]
packages = 
    neural_networks
install_requires =
    numpy>=1.26.1
    pandas>=2.1.1
    tensorflow>=2.14.0
    pyyaml>=6.0.1

python_requires = >=3.6
# package_dir =
#     =neural_networks

